<resources>
    <string name="app_name">Моделирование</string>
    <string name="update">Обновить</string>
    <string name="defaultValue">0</string>


    <string name="varX0">X0</string>
    <string name="varXn">Xn</string>
    <string name="defaultX0">-5</string>
    <string name="defaultXk">5</string>

    <string name="functionF">Функция распределения</string>
    <string name="functionf">Функция плотности</string>

    <!-- Uniform Fragment -->
    <string name="varA">a</string>
    <string name="varB">b</string>
    <string name="defaultA">1</string>
    <string name="defaultB">2</string>

    <!-- Puasson Fragment -->
    <string name="varLambda">lambda</string>
    <string name="defaultLambda">2</string>
    <!-- Normal Fragment -->
    <string name="varMu">Mu</string>
    <string name="varSigma">Sigma</string>
    <string name="defaultMu">0</string>
    <string name="defaultSigma">1</string>
    <!-- Erlang Fragment -->
    <string name="varK">K</string>
    <string name="defaultK">2</string>

    <!-- Options Menu -->
    <string name="uniformDistribution">Равномерное</string>
    <string name="puassonDistribution">Пуссона</string>
    <string name="normalDistribution">Нормальное</string>
    <string name="erlangDistribution">Эрланга</string>
    <string name="graphViewTitle">Фунции плотности и распределения</string>

    <!-- Start Activity -->
    <string name="lab1">Лабораторная 1</string>
    <string name="lab2">Лабораторная 2</string>
    <string name="label_low">0 ... 9</string>
    <string name="label_middle">10 ... 99</string>
    <string name="label_high">100 ... 999</string>
    <string name="QRNS_ANU">Данные из Австралийского Национального Университета</string>
    <string name="buttonEvaluation">Оценка</string>
    <string name="labelInput">Ввод оператора</string>
    <string name="lectionGenerator">Генератор ИУ7 (с лекции)</string>
    <string name="needTenNumber">Должно быть ровно 10 чисел</string>
    <string name="notNumber">Некорректные ланные</string>
    <string name="lab4">Лабораторная 4</string>
    <string name="modeling_action">Дискретно-событийный</string>
    <string name="requestCount">Количество заявок</string>
    <string name="dt">Шаг по времени</string>
    <string name="run">Запуск</string>
    <string name="modelingFailed">При моделировании произошла ошибка</string>
    <string name="labelInputAB">Разброс времени обработки</string>
    <string name="labelInputLambda">Параметр генерации заявок</string>

    <string name="defaultDT">1</string>
    <string name="defaultModelingA">5</string>
    <string name="defaultModelingB">25</string>
    <string name="defaultModelingLambda">10</string>
    <string name="defaultModelingDT">1</string>
    <string name="defaultModelingCount">100</string>
    <string name="labelInputBack">Процент возврата</string>
    <string name="defaultModelingBack">50</string>
    <string name="incorrectData">Некорректные данные. Моделирование может быть неточным</string>
    <string name="labelInputPullSize">Размер памяти</string>
    <string name="defaultModelingPullSize">15</string>
    <string name="lab5">Лабораторная 5</string>
    <string name="lab6">Лабораторная 6</string>
    <string name="regMin">Минимальное время регистрации</string>
    <string name="max">Максимум</string>
    <string name="min">Минимум</string>
    <string name="registrationTime">Время регистрации</string>
    <string name="clientTime">Время прихода клиентов</string>
    <string name="processTime">Время приёма</string>
    <string name="printTime">Время проставления печати</string>
    <string name="defaultMinTime">2</string>
    <string name="defaultMaxTime">5</string>
    <string name="printP">Вероятность поставить печать</string>

</resources>
