<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/viewA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdMargin"
        android:layout_centerVertical="true"
        android:text="@string/varA"/>

    <EditText
        android:id="@+id/inputA"
        android:layout_width="@dimen/widthInput"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdMargin"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="@dimen/smallText"
        android:layout_toEndOf="@id/viewA"
        android:text="@string/defaultA"/>
    <TextView
        android:id="@+id/viewB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdMargin"
        android:layout_toEndOf="@id/inputA"
        android:layout_centerVertical="true"
        android:text="@string/varB" />

    <EditText
        android:id="@+id/inputB"
        android:layout_width="@dimen/widthInput"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdMargin"
        android:inputType="numberSigned|numberDecimal"
        android:layout_toEndOf="@id/viewB"
        android:textSize="@dimen/smallText"
        android:text="@string/defaultB"/>

</RelativeLayout>