<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/viewMu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdMargin"
        android:layout_centerVertical="true"
        android:text="@string/varMu"/>

    <EditText
        android:id="@+id/inputMu"
        android:layout_width="@dimen/widthInput"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdMargin"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="@dimen/smallText"
        android:layout_toEndOf="@id/viewMu"
        android:text="@string/defaultMu"/>

    <TextView
        android:id="@+id/viewSigma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdMargin"
        android:layout_toEndOf="@id/inputMu"
        android:layout_centerVertical="true"
        android:text="@string/varSigma" />

    <EditText
        android:id="@+id/inputSigma"
        android:layout_width="@dimen/widthInput"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdMargin"
        android:inputType="numberDecimal"
        android:layout_toEndOf="@id/viewSigma"
        android:textSize="@dimen/smallText"
        android:text="@string/defaultSigma"/>
</RelativeLayout>