<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.StartActivity">

    <Button
        android:id="@+id/buttonLab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/ButtonStyle"
        android:text="@string/lab1"/>
    <Button
        android:id="@+id/buttonLab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonLab1"
        style="@style/ButtonStyle"
        android:text="@string/lab2"/>

    <Button
        android:id="@+id/buttonLab4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonLab2"
        style="@style/ButtonStyle"
        android:text="@string/lab4"/>

</RelativeLayout>