<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RandomActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageANU"
            android:layout_width="@dimen/anuSize"
            android:layout_height="@dimen/anuSize"
            android:src="@drawable/ic_anu"/>

        <TextView
            android:id="@+id/label_QRNS_ANU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageANU"
            android:layout_alignParentTop="true"
            android:text="@string/QRNS_ANU"
            android:textAlignment="center"
            android:textSize="@dimen/bigText" />

        <android.support.v7.widget.RecyclerView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/list_low"
            android:layout_width="@dimen/list_width"
            android:layout_height="@dimen/list_height"
            android:layout_marginEnd="@dimen/stdMargin"
            android:layout_toStartOf="@id/list_middle"
            android:layout_alignTop="@id/list_middle"
            android:background="@color/recyclerBG"
            tools:listitem="@layout/list_item_integer"/>

        <TextView
            android:id="@+id/label_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_low"
            android:layout_alignStart="@id/list_low"
            android:layout_alignEnd="@id/list_low"
            android:layout_alignTop="@id/label_middle"
            android:text="@string/label_low"
            android:textAlignment="center"/>

        <ProgressBar
            android:id="@+id/progressBarLow"
            android:layout_width="@dimen/progressBarSize"
            android:layout_height="@dimen/progressBarSize"
            android:layout_below="@id/label_low"
            android:layout_alignEnd="@id/label_low"
            android:layout_alignStart="@id/label_low"/>

        <android.support.v7.widget.RecyclerView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/list_middle"
            android:layout_width="@dimen/list_width"
            android:layout_height="@dimen/list_height"
            android:layout_margin="@dimen/stdMargin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/label_QRNS_ANU"
            android:background="@color/recyclerBG"
            tools:listitem="@layout/list_item_integer"
            />

        <TextView
            android:id="@+id/label_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_middle"
            android:layout_alignStart="@id/list_middle"
            android:layout_alignEnd="@id/list_middle"
            android:layout_marginTop="@dimen/halfMargin"
            android:text="@string/label_middle"
            android:textAlignment="center"/>

        <ProgressBar
            android:id="@+id/progressBarMiddle"
            android:layout_width="@dimen/progressBarSize"
            android:layout_height="@dimen/progressBarSize"
            android:layout_below="@id/label_middle"
            android:layout_alignEnd="@id/label_middle"
            android:layout_alignStart="@id/label_middle"/>

        <android.support.v7.widget.RecyclerView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/list_high"
            android:layout_width="@dimen/list_width"
            android:layout_height="@dimen/list_height"
            android:layout_marginStart="@dimen/stdMargin"
            android:layout_toEndOf="@id/list_middle"
            android:layout_alignTop="@id/list_middle"
            android:background="@color/recyclerBG"
            tools:listitem="@layout/list_item_integer"
            />

        <TextView
            android:id="@+id/label_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_high"
            android:layout_alignStart="@id/list_high"
            android:layout_alignEnd="@id/list_high"
            android:layout_alignTop="@id/label_middle"
            android:text="@string/label_high"
            android:textAlignment="center"/>

        <ProgressBar
            android:id="@+id/progressBarHigh"
            android:layout_width="@dimen/progressBarSize"
            android:layout_height="@dimen/progressBarSize"
            android:layout_below="@id/label_high"
            android:layout_alignEnd="@id/label_high"
            android:layout_alignStart="@id/label_high"/>

        <Button
            android:id="@+id/buttonEvaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBarMiddle"
            android:layout_centerHorizontal="true"
            android:text="@string/buttonEvaluation"
            style="@style/ButtonStyle"/>

        <TextView
            android:id="@+id/labelInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonEvaluation"
            android:layout_centerHorizontal="true"
            android:text="@string/labelInput"/>

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stdMargin"
            android:layout_below="@id/labelInput"
            android:inputType="text"/>

        <TextView
            android:id="@+id/viewInputEvaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/stdMargin"
            android:layout_marginBottom="50dp"
            android:layout_below="@id/input"
            android:textSize="@dimen/middleText"/>

    </RelativeLayout>
</ScrollView>